src/ui/theme-private.h
@@ -276,5 +276,6 @@ void meta_theme_calc_geometry (MetaTheme              *theme,
 
 int                   meta_pango_font_desc_get_text_height (const PangoFontDescription *font_desc,
                                                             PangoContext         *context);
+int                   meta_theme_get_window_scaling_factor (void);
 
 #endif /* META_THEME_PRIVATE_H */
